Fix horizontal scroll and blurred annotation

--- a/assets/stylesheets/bootstrap.scss
+++ b/assets/stylesheets/bootstrap.scss
@@ -351,3 +351,7 @@ iframe {
 .MathJax {
   overflow-x: scroll;
 }
+
+blockquote {
+  overflow-x: scroll;
+}
